--- a/public/app/pages/nomenclature/detailsList/detailsList.html
+++ b/public/app/pages/nomenclature/detailsList/detailsList.html
@@ -34,7 +34,7 @@
                     column-defs="defaults"
                     tree-control="treeControl"
                     filter="_filter"
-                    icon-leaf=""
+                    icon-leaf="none"
                     icon-expand="fa fa-fw fa-arrow-right"
                     icon-collapse="fa fa-fw fa-arrow-down"
                     template-url="app/theme/components/treeDnD/template-render.html"
