--- a/public/app/pages/clients/clientsList/clientsList.html
+++ b/public/app/pages/clients/clientsList/clientsList.html
@@ -16,12 +16,12 @@
                 <div ng-if="loading" class="no-data">
                     <i class="fa fa-spinner fa-spin"></i>
                 </div>
-                <div ng-if="!loading && list.length == 0" class="no-data">
+                <div ng-if="!loading && clients.length == 0" class="no-data">
                     <i class="fa fa-exclamation-triangle"></i>
                     Нет данных
                 </div>
                 <table ng-if="!loading" class="table table-hover">
-                    <tr ng-if="list.length != 0" ng-repeat="item in list | filter:search" ng-click="showInfo(item.id)" ng-class="{active: item.id == current}" class="no-top-border">
+                    <tr ng-if="clients.length != 0" ng-repeat="(key, item) in clients | filter:search" ng-click="showInfo(key)" ng-class="{active: key == current}" class="no-top-border">
                         <td ng-class="nowrap">{{item.name}}</td>
                         <td class="align-right">
                             <a ui-sref="orders-custom({id: item.id})" class="btn btn-xs btn-primary">Заказы</a>
@@ -44,19 +44,19 @@
                 <div ng-show="loading" class="no-data">
                     <i class="fa fa-spinner fa-spin"></i>
                 </div>
-                <div ng-show="!loading && list.length == 0" class="no-data">
+                <div ng-show="!loading && clients.length == 0" class="no-data">
                     <i class="fa fa-exclamation-triangle"></i>
                     Нет данных
                 </div>
-                <div ng-show="!loading && list.length > 0">
+                <div ng-show="!loading && clients.length > 0">
                     <div class="row">
                         <div class="col-md-12">
-                            <pre class="text">{{client.info}}</pre>
+                            <pre class="text">{{(current == null) ? 'Клиент не выбран.' : isNull((clients | filter:search)[current].description) ? 'Нет информации.' : (clients | filter:search)[current].description}}</pre>
                         </div>
                     </div>
-                    <div class="row">
-                        <div ng-show="(client.files != null && client.files.length > 0)" class="col-md-12 adds">
-                            <a ng-repeat="file in client.files" class="btn btn-primary btn-xs" href="/files/{{file.id}}/{{file.name}}" download="download">{{file.name}}</a>
+                    <div class="row" ng-repeat="(key, client) in clients | filter:search" ng-show="key == current">
+                        <div ng-show="(client.additions != null && client.additions.length > 0)" class="col-md-12 adds">
+                            <a ng-repeat="file in client.additions" class="btn btn-primary btn-xs" href="/files/{{file.versions[0].id}}/{{file.name}}" download="download">{{file.name}}</a>
                         </div>
                     </div>
                 </div>
