Переделал модальное окно галлереи чертежей заказа.

--- a/public/app/pages/nomenclature/detailsList/detailsList.html
+++ b/public/app/pages/nomenclature/detailsList/detailsList.html
@@ -44,3 +44,4 @@
         </div>
     </div>
 </div>
+<div ng-if="!isNull(order) && galleries.main.length" ng-include="'app/pages/nomenclature/modal/orderGallery.html'"></div>
