--- a/public/app/pages/nomenclature/modal/orderGallery.html
+++ b/public/app/pages/nomenclature/modal/orderGallery.html
@@ -1,20 +1,24 @@
-<div class="modal-content">
-    <div class="modal-header">
-        <button type="button" class="close" ng-click="modalActions.close()" aria-label="Close">
-            <em class="ion-ios-close-empty sn-link-close"></em>
-        </button>
-        <h4 class="modal-title" id="pattern-modal-label">Все чертежи</h4>
-    </div>
-    <div class="modal-body">
-        <div ng-repeat="(key, item) in galleries.main" class="image-collection">
-            <div class="image-preview">
-                <div class="image-mask"></div>
-                <div class="image-actions">
-                    <div class="image-actions-content">
-                        <button class="btn btn-success btn-image-action" ng-click="openGallery('main', key)">Просмотр <i class="fa fa-eye"></i></button>
+<div id="modalGallery" class="modal fade" tabindex="-1" role="dialog">
+    <div class="modal-dialog modal-exlg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <em class="ion-ios-close-empty sn-link-close"></em>
+                </button>
+                <h4 class="modal-title" id="pattern-modal-label">Все чертежи</h4>
+            </div>
+            <div class="modal-body">
+                <div ng-repeat="(key, item) in galleries.main" class="image-collection">
+                    <div class="image-preview">
+                        <div class="image-mask"></div>
+                        <div class="image-actions">
+                            <div class="image-actions-content">
+                                <button class="btn btn-success btn-image-action" ng-click="openGallery('main', key)">Просмотр <i class="fa fa-eye"></i></button>
+                            </div>
+                        </div>
+                        <img data-src="/files/h/180/{{item.image.id}}/{{item.image.name}}">
                     </div>
                 </div>
-                <img ng-src="/files/h/180/{{item.image.id}}/{{item.image.name}}">
             </div>
         </div>
     </div>
