--- a/public/app/pages/nomenclature/detail/detail.html
+++ b/public/app/pages/nomenclature/detail/detail.html
@@ -6,9 +6,9 @@
                 <div class="row">
                     <div class="col-md-12 hidden-sm hidden-xs">
                         <h3>
-                            {{caption + (preview.detail.name && preview.detail.code ? " " + preview.detail.name +
-                            " (" + preview.detail.code + ")" : (preview.detail.name) ? " " + preview.detail.name : "") }}
-                            <a href="javascript:window.history.back(-1)" class="pull-right">Назад</a>
+                            {{caption + (preview.detail.name && preview.detail.code ? " " + preview.detail.code +
+                            " (" + preview.detail.name + ")" : (preview.detail.code) ? " " + preview.detail.code : "") }}
+                            <a href="javascript:window.history.back(-1)" class="pull-right" ng-if="isNull(detail.orderId)">Назад</a>
                         </h3>
                     </div>
                 </div>
